--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminControler"></activity>
+        <activity android:name=".Creation_recette"></activity>
+        <activity android:name=".AdminControler" />
         <activity android:name=".MesRecettes" />
         <activity android:name=".MainActivity">
             <intent-filter>
